feat: 迁移模组到 Minecraft 1.12.2 CatRoom/Cleanroom
- 更新 build.gradle 使用 ForgeGradle 6.x
- 更改 Java 版本从 21 到 8
- 替换 NeoForge API 为 Forge 1.12.2 API
- 更新事件系统从 NeoForge 到 Forge 1.12.2
- 重写命令系统从 Brigadier 到 ICommand
- 更新日志系统从 SLF4J 到 Log4j
- 创建 mcmod.info 替代 neoforge.mods.toml
- 适配所有 API 调用到 1.12.2 版本